--- a/o_meni.html
+++ b/o_meni.html
@@ -34,13 +34,13 @@
 		<br />
 		<h1>MOJI CRTEŽI:</h1>
 		<h1>1.) Slika crteža cvijeća koje raste iz lubanje</h1>
-        <p><img src= "skull flowers.jpg" width="600" height="600" /></p>
+        <p><img src= "slike/skull flowers.jpg" width="600" height="600" /></p>
 		<br />
 		<h1>2.) Slika crteža sunčeve baklje koja briše svijet</h1>
-		<p><img src= "solar flare.jpg" width="600" height="600" /></p>
+		<p><img src= "slike/solar flare.jpg" width="600" height="600" /></p>
 		<br />
 		<h1>3.) Slika crteža bića koji nosi svemir unutar sebe</h1>
-		<p><img src="cosmos.jpg" width="600" height="600" /></p>
+		<p><img src="slike/cosmos.jpg" width="600" height="600" /></p>
 		<br />
 		<h1>OVO JE VIDEO JEDNE OD MOJIH NAJDRAŽIH IGARA:</h1>
 		<br />
