--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h3>NAVIGACIJA:</h3>
 <br />
 <ul>
- <li><a href="file:///C:/Users/JOPA/Desktop/O%20meni.html">O meni</a></li>
+ <li><a href="o_meni.html" title="O meni">O meni</a></li>
  <br />
  <li><a href="file:///C:/Users/JOPA/Desktop/Vje%C5%BEbe.html">Vježbe</a></li>
  <br />
