--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <ul>
  <li><a href="o_meni.html" title="O meni">O meni</a></li>
  <br />
- <li><a href="file:///C:/Users/JOPA/Desktop/Vje%C5%BEbe.html">Vježbe</a></li>
+ <li><a href="vježbe.html" title="Vježba">Vježbe</a></li>
  <br />
- <li><a href="file:///C:/Users/JOPA/Desktop/Video.html">Video</a></li>
+ <li><a href="video.html" title="Video">Video</a></li>
 </ul>
 </nav>
 <br />
