--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <ul>
  <li><a href="o_meni.html" title="O meni">O meni</a></li>
  <br />
- <li><a href="vježbe.html" title="Vježba">Vježbe</a></li>
+ <li><a href="vježbe.html" title="Vježbe">Vježbe</a></li>
  <br />
  <li><a href="video.html" title="Video">Video</a></li>
 </ul>
