--- a/o_meni.html
+++ b/o_meni.html
@@ -11,7 +11,7 @@
 			<ul>
 			<li><a href="file:///C:/Users/JOPA/Desktop/JosipKne%C5%BEevi%C4%87.html">POVRATAK NA POČETNU STRANICU</a></li>
 			<br />
-			<li><a href="file:///C:/Users/JOPA/Desktop/Vje%C5%BEbe.html">VJEŽBE</a></li>
+			<li><a href="vježbe.html" title="Vježbe">Vježbe</a></li>
 			<br />
 			<li><a href="file:///C:/Users/JOPA/Desktop/Video.html">VIDEO</a></li>
 			</ul>
