--- a/o_meni.html
+++ b/o_meni.html
@@ -9,11 +9,11 @@
 	<nav>			
 		  <h1>NAVIGACIJA:</h1>
 			<ul>
-			<li><a href="file:///C:/Users/JOPA/Desktop/JosipKne%C5%BEevi%C4%87.html">POVRATAK NA POČETNU STRANICU</a></li>
+			<li><a href="index.html" title="POVRATAK NA POČETNU STRANICU">POVRATAK NA POČETNU STRANICU</a></li>
 			<br />
-			<li><a href="vježbe.html" title="Vježbe">Vježbe</a></li>
+			<li><a href="vježbe.html" title="Vježbe">VJEŽBE</a></li>
 			<br />
-			<li><a href="file:///C:/Users/JOPA/Desktop/Video.html">VIDEO</a></li>
+			<li><a href="video.html" title="Video">VIDEO</a></li>
 			</ul>
 		</nav>
 		<h1>O MENI:</h1>
