--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <h3>NAVIGACIJA:</h3>
 <br />
 <ul>
- <li><a href="o_meni.html" title="O meni">O meni</a></li>
+ <li><a href="o_meni.html" title="O MENI">O MENI</a></li>
  <br />
- <li><a href="vježbe.html" title="Vježbe">Vježbe</a></li>
+ <li><a href="vježbe.html" title="VJEŽBE">VJEŽBE</a></li>
  <br />
- <li><a href="video.html" title="Video">Video</a></li>
+ <li><a href="video.html" title="VIDEO">VIDEO</a></li>
 </ul>
 </nav>
 <br />
