--- a/video.html
+++ b/video.html
@@ -9,11 +9,11 @@
 <nav>
 		  <h1>NAVIGACIJA:</h1>
 			<ul>
-			<li><a href="file:///C:/Users/JOPA/Desktop/JosipKne%C5%BEevi%C4%87.html">POVRATAK NA POČETNU STRANICU</a></li>
+			<li><a href="index.html" title="POVRATAK NA POČETNU STRANICU">POVRATAK NA POČETNU STRANICU</a></li>
 			<br />
-			<li><a href="file:///C:/Users/JOPA/Desktop/O%20meni.html">O MENI</a></li>
+			<li><a href="o_meni.html" title="O MENI">O MENI</a></li>
 			<br />
-			<li><a href="file:///C:/Users/JOPA/Desktop/Vje%C5%BEbe.html">VJEŽBE</a></li>
+			<li><a href="vježbe.html" title="Vježbe">VJEŽBE</a></li>
 			</ul>
 			<br />
 			<br />
@@ -30,7 +30,7 @@
 		Uglavnom sam za video koristio 5 efekta kako bih dao željen dojam.
 		</p>
 <video width="1200" height="700" controls>
-  <source src="knjiga sjaj_finalna verzija.mp4" type="video/mp4"/>
+  <source src="videi/knjiga sjaj_finalna verzija.mp4" type="video/mp4"/>
 </video>
 <br />
 <br />
