--- a/vježbe.html
+++ b/vježbe.html
@@ -9,18 +9,18 @@
 <nav>			
 		  <h1>NAVIGACIJA:</h1>
 			<ul>
-			<li><a href="file:///C:/Users/JOPA/Desktop/JosipKne%C5%BEevi%C4%87.html">POVRATAK NA POČETNU STRANICU</a></li>
+			<li><a href="index.html" title="POVRATAK NA POČETNU STRANICU">POVRATAK NA POČETNU STRANICU</a></li>
 			<br />
-			<li><a href="file:///C:/Users/JOPA/Desktop/O%20meni.html">O MENI</a></li>
+			<li><a href="o_meni.html" title="O MENI">O MENI</a></li>
 			<br />
-			<li><a href="file:///C:/Users/JOPA/Desktop/Video.html">VIDEO</a></li>
+			<li><a href="video.html" title="VIDEO">VIDEO</a></li>
 			</ul>
 		</nav>
 		<br />
 <h1>OVO SU MOJE VJEŽBE SA KOLEGIJA DIGITALNI MULTIMEDIJ:</h1>
 <h2>1.) VJEŽBA</h2>
 <p>Ovo je moje ime i prezime koje sam napisao svojim fontom kojeg smo trebali napraviti za vježbu.</p>
-<img src= "JosipKnežević.jpg" width="1200" height="200" />
+<img src= "slike/JosipKnežević.jpg" width="1200" height="200" />
 <br />
 <br />
 <br />
@@ -32,7 +32,7 @@
 <h2>2.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo koristili bezierovu krivulju zajedno sa fontom iz prve vježbe kako bi napisali naše inicijale i dobili efekt da su popunjena krivuljama.</p>
 <br />
-<img src= "Vjezba2.png" width="700" height="600" />
+<img src= "slike/Vjezba2.png" width="700" height="600" />
 <br />
 <br />
 <br />
@@ -44,7 +44,7 @@
 <h2>3.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali koristiti razne oblike i alate transformacije i bojanja kako bi nacrtali nešto.</p>
 <br />
-<img src= "vjezba3.jpg" width="600" height="800" />
+<img src= "slike/vjezba3.jpg" width="600" height="800" />
 <br />
 <br />
 <br />
@@ -56,7 +56,7 @@
 <h2>4.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali urediti sliku i dati joj određene efekte.</p>
 <br />
-<img src= "vjezba4.jpg" width="600" height="600" />
+<img src= "slike/vjezba4.jpg" width="600" height="600" />
 <br />
 <br />
 <br />
@@ -67,7 +67,7 @@
 <br />
 <h2>1.) PROJEKTNI ZADATAK</h2>
 <p>Ovo je moj prvi projektni zadatak u kojem smo morali precrtati zadanu sliku u Illustratoru i koristiti sve elemente naučene od prije.</p>
-<img src= "pz1.jpg" width="800" height="600" />
+<img src= "slike/pz1.jpg" width="800" height="600" />
 <br />
 <br />
 <br />
@@ -79,7 +79,7 @@
 <h2>5.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali primjenjivati razne filtere na ljudska lica.</p>
 <br />
-<img src= "vjezba5 drugi dio.jpg" width="600" height="800" />
+<img src= "slike/vjezba5 drugi dio.jpg" width="600" height="800" />
 <br />
 <br />
 <br />
@@ -91,7 +91,7 @@
 <h2>6.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali isti selfie nas obojati u razne boje koristeći zadane alate.</p>
 <br />
-<img src= "Josip_Knezevic_vjezba6_2.jpg" width="800" height="600" /></p>
+<img src= "slike/Josip_Knezevic_vjezba6_2.jpg" width="800" height="600" /></p>
 <br />
 <br />
 <br />
@@ -103,7 +103,7 @@
 <h2>7.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali više elemenata iz drugih slika spojiti u jednu sliku.</p>
 <br />
-<img src= "Josip_Knezevic_Vjezba7_2.jpg" width="1000" height="600" />
+<img src= "slike/Josip_Knezevic_Vjezba7_2.jpg" width="1000" height="600" />
 <br />
 <br />
 <br />
@@ -115,7 +115,7 @@
 <h2>2.) PROJEKTNI ZADATAK</h2>
 <p>Ovo je drugi projektni zadatak u kojem smo trebali koristiti sve naučene vještine od prijašnjih triju vježbi.</p>
 <br />
-<img src= "Josip_Knezevic_projektni_zadatak_2 (1).jpg" width="1200" height="600" />
+<img src= "slike/Josip_Knezevic_projektni_zadatak_2 (1).jpg" width="1200" height="600" />
 <br />
 <br />
 <br />
@@ -127,7 +127,7 @@
 <h2>8.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali napraviti naš vlastiti kinemagra u gif formatu.</p>
 <br />
-<img src= "Josip_Knezevic_Vjezba_8_2.gif" width="1000" height="600" />
+<img src= "slike/Josip_Knezevic_Vjezba_8_2.gif" width="1000" height="600" />
 <br />
 <br />
 <br />
@@ -140,7 +140,7 @@
 <p>Ovo je vježba u kojoj smo morali napraviti vlastitu video montažu koristeći razne alate i efekte.</p>
 <br />
 <video width="960" height="540" controls>
-  <source src="moj video Josip Knezevic.mp4" type="video/mp4"/>
+  <source src="video/moj video Josip Knezevic.mp4" type="video/mp4"/>
 </video>
 <br />
 <br />
