--- a/vježbe.html
+++ b/vježbe.html
@@ -44,7 +44,7 @@
 <h2>3.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali koristiti razne oblike i alate transformacije i bojanja kako bi nacrtali nešto.</p>
 <br />
-<img src= "slike/vjezba3.jpg" width="600" height="800" />
+<img src= "slike/vjezba3.JPG" width="600" height="800" />
 <br />
 <br />
 <br />
@@ -56,7 +56,7 @@
 <h2>4.) VJEŽBA</h2>
 <p>Ovo je vježba u kojoj smo trebali urediti sliku i dati joj određene efekte.</p>
 <br />
-<img src= "slike/vjezba4.jpg" width="600" height="600" />
+<img src= "slike/vjezba4.JPG" width="600" height="600" />
 <br />
 <br />
 <br />
@@ -140,7 +140,7 @@
 <p>Ovo je vježba u kojoj smo morali napraviti vlastitu video montažu koristeći razne alate i efekte.</p>
 <br />
 <video width="960" height="540" controls>
-  <source src="video/moj video Josip Knezevic.mp4" type="video/mp4"/>
+  <source src="videi/moj video Josip Knezevic.mp4" type="video/mp4"/>
 </video>
 <br />
 <br />
