--- a/vježbe.html
+++ b/vježbe.html
@@ -67,7 +67,7 @@
 <br />
 <h2>1.) PROJEKTNI ZADATAK</h2>
 <p>Ovo je moj prvi projektni zadatak u kojem smo morali precrtati zadanu sliku u Illustratoru i koristiti sve elemente naučene od prije.</p>
-<img src= "slike/pz1.jpg" width="800" height="600" />
+<img src= "slike/pz1.JPG" width="800" height="600" />
 <br />
 <br />
 <br />
